# githueber

./: .gitignore  AGENTS.md  IMPLEMENTATION_NOTES.md  LICENSE  PLAN.md  README.md  UV_MIGRATION_PLAN.md  install-githueber.sh  pyproject.toml  requirements-dev.txt  setup-cron.py  setup.py  uninstall-opencode-config.sh
.github/: ISSUE_TEMPLATE.md
agent-resources/specs/: PRD-misc.md
agent-resources/specs/acp-bidirectional-client/: summary.md
agent-resources/specs/initial-features/: 2-execution-plane.md  3-daemon-classes.md  6-bun-networking.md  PRD.md
config/: issue-processor-config.example.yaml
docs/specs/: PRD-misc.md  PRD-templating.md  claude-integration.md
docs/specs/codex-resumable-sessions/: PRD-codex-resumable-sessions.md
docs/specs/initial-features/: 1-system-design.md
docs/specs/opencode-resumable-sessions/: GH-ISSUE_18_summary.md
gemini-cli/: README.md
gemini-cli/.gemini/agents/: plan-writer.md
gh-orchestrator/: README.md
gh-orchestrator/config/: gh-orchestrator-config.example.yaml
gh-orchestrator/src/gh-orchestrator/: setup_cron.py
githueber/: .gitignore  package.json  tsconfig.json
githueber/config/: githueber-config.example.yaml
githueber/docs/: ARCHITECTURE.md
githueber/runtime/: opencode-sessions.json
githueber/src/: daemon.ts  prompts.ts  startDaemon.ts
githueber/src/cli/: args.ts  index.ts
githueber/src/codex/: CodexHarnessClient.ts  CodexSessionManager.ts  CodexSessionRegistry.ts
githueber/src/config/: ConfigManager.ts
githueber/src/github/: GitHubPoller.ts
githueber/src/harness/: sessionEvents.ts
githueber/systemd/: githueber.service
githueber/tests/: acp-session-manager.test.ts  cli.test.ts  codex-harness-client.test.ts  codex-session-manager.test.ts  config-manager.test.ts  daemon-core.test.ts  harness-assets.test.ts  install-script.test.ts  opencode-session-manager.test.ts  session-events.test.ts  start-daemon.test.ts  state-router.test.ts
opencode/: .stow-local-ignore  README.md
opencode-gh-buddy/: PRD-1.md  README.md  package.json
opencode-gh-buddy/config/: gh-buddy-config.example.yaml
opencode-gh-buddy/docs/: ARCHITECTURE.md
opencode-gh-buddy/specs/: PRD-misc.md  PRD-prompt.md
opencode-gh-buddy/src/: daemon.ts  index.ts  prompts.ts  startDaemon.ts
opencode-gh-buddy/systemd/: opencode-gh-buddy.service
opencode-gh-buddy/tests/: acp-session-manager.test.ts  cli.test.ts  codex-harness-client.test.ts  config-manager.test.ts  daemon-core.test.ts  github-auth.test.ts  ipc-handler.test.ts  session-events.test.ts  start-daemon.test.ts  state-router.test.ts
scratchpad/: INSTALLATION_TEST.md  PLAN.md
scripts/: install-opencode-config.sh
scripts/issue_processor/: __init__.py  __main__.py  cli.py  config.py  github_client.py  lock_manager.py  models.py  processor.py  whiteboard.py  workflows.py
specs/: PRD-prompt.md
tests/: test_config.py  test_lock_manager.py
whiteboard/: whiteboard-template.md
(+58 files in other folders)
